[package]
name = "belong"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1.4.0"
open = "1.4.0"
pulldown-cmark = "0.7.0"
regex = "1.3.6"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
structopt = "0.3.12"
tera = "1.2.0"
toml = "0.5.6"
walkdir = "2.3.1"

[dev-dependencies]
tempfile = "3.1.0"
