[package]
name = "belong"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "Simple and flexible static site generator."
readme = "README.md"
homepage = "https://github.com/rossmacarthur/belong"
repository = "https://github.com/rossmacarthur/belong"
license = "MIT OR Apache-2.0"
keywords = ["static", "site", "generator"]
categories = ["command-line-utilities"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
anyhow = "1.0.32"
casual = "0.1.2"
chrono = { version = "0.4.15", features = ["serde"] }
femme = "2.1.1"
log = "0.4.11"
open = "1.4.0"
pulldown-cmark = "0.8.0"
regex = "1.3.9"
regex-macro = "0.1.1"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3.17"
tera = "1.5.0"
toml = "0.5.6"
walkdir = "2.3.1"

[dev-dependencies]
tempfile = "3.1.0"
